--- a/src/components/homepage.css
+++ b/src/components/homepage.css
@@ -45,5 +45,18 @@
     width: 100%;
     display: block;
   }
+  .zoom-in-out-box {
+    width: 85%;
+    animation: zoom-in-zoom-out 1s ease ;
+    animation-fill-mode: forwards;
+  }
   
+  @keyframes zoom-in-zoom-out {
+    0% {
+      transform: scale(1, 1);
+    }
+    100% {
+      transform: scale(1.2, 1.2);
+    }
+  }
   
