--- a/src/components/clothing.css
+++ b/src/components/clothing.css
@@ -20,6 +20,7 @@
 }
 .clothing-img {
   animation: 1s ease-out 0s 1 slideInRight;
+  animation-fill-mode: forwards;
 }
 .clothing-slideBottom-img {
   animation: 1s ease-out 0s 1 slideInBottom;
@@ -97,6 +98,25 @@
     width: 100%;
     padding-left: 20px;
   }
+  .tourgif{
+    position: absolute;
+    /* bottom: 90vh; */
+    height: 50vh; 
+    width: 50vh;
+    /* right: -0vw; */
+   }
+  .tourdetail{
+    padding-top: 450px;
+  }
+  .cafehead{
+    font-size: 45px;
+    justify-content: center;
+    text-align: center;
+  }
+  .cafeimg{
+    height: 45vh;
+    width: 35vh;
+  }
 }
 @media only screen and (min-width: 769px) {
   .cloth-text{
@@ -105,6 +125,7 @@ font-size: 85px;
   }
   .tours-head{
     font-size: 90px;
+    z-index: 10;
   }
   .head{
     padding-top: 10px;
@@ -129,5 +150,26 @@ font-size: 85px;
     width: 70%;
     padding-left: 30px;
   }
- 
+ .tourgif{
+   /* z-index: 2; */
+  position: fixed;
+  bottom: -75vh;
+  height: 80vh; 
+  width: 80vh;
+  right: -55vw;
+ }
+ .gifbg{
+   position: fixed;
+ }
+ .tourdetail{
+   padding-top: 10px;
+ }
+ .cafehead{
+   font-size: 70px;
+   padding-left: 40px;
+ }
+ .cafeimg{
+   height: 70vh;
+   width: 50vh;
+ }
 }
